ui is fixed also responsive. Name of remote stream is visible now

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   /* padding: 2rem; */
   text-align: center;
+}
+
+.bottom-ribbon {
+  top: 93%;
 }
